# dbus-message-parser

./: .clippy.toml  .gitignore  .travis.sh  .travis.yml  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
.travis/: coverage.sh  zip.sh
benches/: message.rs
examples/: create_method_call.rs  create_signal.rs  decode_method_call.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_encode_decode.rs
fuzz/src/: decode_encode_decode.rs  decode_encode_decode_match_rule.rs  decode_encode_decode_message.rs
src/: decoder.rs  encoder.rs  error.rs  header.rs  lib.rs  message.rs
src/decode/: decoder.rs  error.rs  mod.rs  tests.rs
src/decode/message/: header.rs  message_struct.rs  mod.rs
src/decode/value/: basic_type.rs  container.rs  mod.rs  value_enum.rs
src/decode/value/tests/: basic_type.rs  container.rs  mod.rs
src/encode/: encoder.rs  error.rs  mod.rs
src/encode/message/: header.rs  message_struct.rs
src/encode/value/: basic_type.rs  container.rs  value_enum.rs
src/encode/value/tests/: basic_type.rs  container.rs  encode_decode.rs  mod.rs
src/match_rule/: arg.rs  arg_path.rs  decode.rs  encode.rs  escape.rs  matching.rs  mod.rs  split.rs  unescape.rs
src/message/: flags.rs  header.rs  message.rs  message_struct.rs  mod.rs  types.rs
src/message/decode/: header.rs  message.rs
src/message/encode/: header.rs  message.rs  mod.rs
src/message/header/: error.rs  field.rs  fields.rs  header.rs  header_struct.rs  mod.rs
src/value/: bus.rs  container.rs  decode.rs  encode.rs  error.rs  interface.rs  member.rs  mod.rs  object_path.rs  signature.rs  type_enum.rs  value_enum.rs
src/value/bus/: mod.rs  unique_connection_name.rs  well_known_bus_name.rs
src/value/decode/: basic_type.rs  container.rs  mod.rs  tests.rs  value.rs
src/value/encode/: basic_type.rs  container.rs  mod.rs  tests.rs
tests/: display.rs  header.rs  message.rs  mod.rs  object_path.rs  signature.rs  value.rs
tests/match_rule/: arg.rs  arg_path.rs  decode.rs  encode.rs  matching.rs  mod.rs
tests/message/: decode_encode.rs  decode_encode_decode.rs  encode.rs  header.rs  message.rs  message_tests.rs  mod.rs
tests/value/: basic.rs  bus.rs  decode.rs  encode.rs  error.rs  interface.rs  member.rs  mod.rs  object_path.rs  signature.rs  type_enum.rs  value_enum.rs
tests/value/bus/: mod.rs  unique_connection_name.rs  well_known_bus_name.rs
tests/value/decode/: basic_type.rs  mod.rs
tests/value/encode/: basic_type.rs  container.rs  encode_decode.rs
