[package]
name = "dbus-message-parser"
version = "4.0.1"
edition = "2018"
description = "Libary to encode and decode DBus message"
readme = "README.md"
authors = ["LinkTed <link.ted@mailbox.org>"]
license = "LGPL-3.0"
keywords = ["dbus", "parser"]
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "benches/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "NOTICE"
    ]
repository = "https://github.com/LinkTed/dbus-message-parser"
categories = [
    "parser-implementations",
    "encoding"
    ]

[dependencies]
bytes = "~1.0"
lazy_static = "~1.4"
bitflags = "~1.2.1"
thiserror = "~1.0.23"
cfg-if = "~1.0"

[dev-dependencies]
criterion = "~0.3.3"

[[bench]]
name = "message"
harness = false
