[package]
name = "dbus-message-parser"
version = "4.3.0"
edition = "2018"
description = "Libary to encode and decode DBus message"
readme = "README.md"
authors = ["LinkTed <link.ted@mailbox.org>"]
license = "BSD-3-Clause"
keywords = ["dbus", "parser"]
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs", 
    "benches/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "NOTICE"
    ]
repository = "https://github.com/LinkTed/dbus-message-parser"
categories = [
    "parser-implementations",
    "encoding"
    ]

[dependencies]
bytes = "~1.1.0"
lazy_static = "~1.4.0"
bitflags = "~1.3.1"
thiserror = "~1.0.26"
cfg-if = "~1.0.0"

[dev-dependencies]
criterion = "~0.3.5"

[[bench]]
name = "message"
harness = false
