[package]
name = "fuzz"
version = "0.1.0"
authors = ["LinkTed <link.ted@mailbox.org>"]
edition = "2018"

[dependencies]
bytes = "~1.0.1"
honggfuzz = "~0.5.52"

[dependencies.dbus-message-parser]
path = ".."

[[bin]]
name = "decode_encode_decode_message"
path = "src/decode_encode_decode_message.rs"
test = false
doc = false


[[bin]]
name = "decode_encode_decode_match_rule"
path = "src/decode_encode_decode_match_rule.rs"
test = false
doc = false
